--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,55 @@
-#django
-
-*.log
-*__pycache__
-db.sqlite3
-media
-
-#arquivos de backup
-
-*.bak
-
-#chaves SSH
-
 *.pub
+
 OPENSSH
+
+__pycache__/
+
+*.py[cod]
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+.eggs/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Pycharm project files
+.idea/
+
+# PyTest cache
+.pytest_cache/
+
+# Coverage
+.coverage
+coverage.xml
+
+# Tox
+.tox/
+.cache/
+.python-version
+
+# VirtualEnv
+.venv/
+
+# Developers
+*.sw*
+manage.py
+.DS_Store
+
+# example database
+
+sqlite3.db
