add: '.env' variable enviroment, get the '.env-exemple' for own use;
add: Created new app 'authors' for authors from receps and system for profille;

fixed: Solved the problems in loggin and sing up system;

update: atualized the style from system authentication;

update: Renomed the dirs from 'extensions' for 'partials';

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,15 @@ __pycache__/
 
 *.py[cod]
 
+*.bak
+
 .env
 
-.coverage
+# Tests Coverage
 
-.coveragerc
+htmlcov/
+
+.coverage
 
 # Distribution / packaging
 .Python
@@ -53,6 +57,6 @@ coverage.xml
 manage.py
 .DS_Store
 
-# example database
+#database
 
 sqlite3.db
