--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django>=5.0.1
-pytest>=7.4.4
-pytest-django>=4.7.0
-python-dotenv>=1.0.1
-coverage>=7.4.1
+Django==5.0.1
+pytest>==7.4.4
+pytest-django==4.7.0
+python-dotenv==1.0.1
+coverage==7.4.1
