update: Refactored code for integration of view class bases (django);
add: Created news bases class: 'RecepsListView', 'AuthorsCreate', 'AuthView';

add: Created news tests for Authors;

--- a/.env-exemple
+++ b/.env-exemple
@@ -1,5 +1,24 @@
 PER_PAGE = 42
 
-SECRET_KEY =
+SECRET_KEY = "secret_key"
 
 DEBUG = 1
+
+# Database setting
+
+# Sqlite
+
+DATABASE_ENGINE = "django.db.backends.sqlite3"
+
+DATABASE_NAME = "./db.sqlite3"
+
+#Postgresql
+
+DATABASE_ENGINE = "django.db.backends.postgresql"
+
+DATABASE_NAME = "database"
+
+DATABASE_USER = "usuario"
+DATABASE_HOST = "127.0.0.1"
+DATABASE_PASSWORD = "password123"
+DATABASE_PORT = "5432"
