--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,8 @@
 Django==5.0.1
 pytest>==7.4.4
 pytest-django==4.7.0
+django-debug-toolbar==4.3.0
 python-dotenv==1.0.1
 coverage==7.4.1
+django-debug-toolbar==4.3.0
+Pillow==10.2.0
